# Eno_E

./: .gitignore  .swp  Dockerfile  README.md  README_TRAINING.md  __init__.py  client.py  darkguard_openenv_blueprint.md  data_prep.py  dataset_specifications.md  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: deploy_hf_spaces.yml  sync_to_hf.yml
darkguard-openenv/: Blog.md  Dockerfile  README.md  openenv.yaml  pyproject.toml  requirements.txt
darkguard-openenv/examples/: local_smoke.py  remote_smoke.py
darkguard-openenv/server/: app.py
darkguard-openenv/src/darkguard_openenv/: __init__.py  client.py  environment.py  models.py  rewards.py  screens.py  utils.py  validators.py
darkguard-openenv/tests/: test_determinism.py  test_rewards.py  test_smoke.py
darkguard-selfplay-trainer/: .env.example  .gitignore  Dockerfile  README.md  app.py  requirements.txt
darkguard-selfplay-trainer/examples/: quick_local_smoke.py  remote_env_ping.py
darkguard-selfplay-trainer/src/darkguard_trainer/: Untitled  __init__.py  baseline.py  checkpointing.py  config.py  curriculum.py  dataset_utils.py  elo.py  env_client.py  evaluation.py  gradio_app.py  hf_utils.py  model_utils.py  parser_utils.py  rewards.py  rollout.py  selfplay.py  state_store.py  training.py  ui_state.py  wandb_utils.py
darkguard-selfplay-trainer/tests/: test_curriculum.py  test_elo.py  test_env_connection.py  test_parser.py  test_reward_routing.py  test_selfplay_scheduler.py
darkguard_preprocessed/: all_consumer_sft.jsonl  all_designer_sft.jsonl  all_normalized.jsonl  consumer_train.jsonl  consumer_val.jsonl  designer_train.jsonl  designer_val.jsonl  summary.json
scripts/: deploy_hf_space_folder.py  hf_push_spaces.py  train_selfplay_demo.py  train_trl_demo.py
server/: RL_Env_environment.py  __init__.py  app.py  darkguard_environment.py
sft_training/: .env.example  README_SFT.md  kaggle_darkguard_sft.ipynb  requirements.txt  run_consumer.sh  run_designer.sh  train_sft.py
src/darkguard/: __init__.py  env.py  grader.py  models.py  oracle.py  rewards.py  screens.py  selfplay.py
src/darkguard/episodes/: easy_safe_signup.json  hard_cancel_maze.json  medium_fair_checkout.json
tests/: __init__.py  guideline.txt  test_determinism.py  test_env.py  test_grader.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py
