[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkguard-openenv"
version = "1.0.0"
description = "DarkGuard — Consumer Protection RL Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "datasets>=4.8.4",
    "tqdm>=4.67.3",
    "unsloth>=2025.11.1",
    "trl>=0.23.0",
    "transformers>=4.57.2",
    "accelerate>=1.13.0",
    "peft>=0.19.1",
    "bitsandbytes>=0.49.2",
    "huggingface-hub>=0.36.2",
    "python-dotenv>=1.2.2",
    "wandb>=0.26.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]
train = [
    "wandb>=0.19.0",
    "datasets>=2.20.0",
    "transformers>=4.45.0",
    "trl>=0.12.0",
    "accelerate>=0.34.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "src*"]

[tool.setuptools.package-dir]
"" = "."

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
